# bayan

./: CMakeLists.txt  FileCommander.cpp  FileCommander.hpp  FilesReader.cpp  FilesReader.hpp  HashGenerator.cpp  HashGenerator.hpp  main.cpp
.github/workflows/: release.yml
